@@ -2864,7 +2864,7 @@ operator|==
 literal|0
 return|;
 block|}
-comment|/**    * @param column Column minus its delimiter    * @return True if column matches.    * @see #matchingColumn(byte[])    */
+comment|/**    * @param column Column minus its delimiter    * @param familylength Length of family in passed<code>column</code>    * @return True if column matches.    * @see #matchingColumn(byte[])    */
 specifier|public
 name|boolean
 name|matchingColumnNoDelimiter
@@ -2873,6 +2873,10 @@ specifier|final
 name|byte
 index|[]
 name|column
+parameter_list|,
+specifier|final
+name|int
+name|familylength
 parameter_list|)
 block|{
 name|int
@@ -2889,6 +2893,14 @@ argument_list|(
 name|o
 argument_list|)
 decl_stmt|;
+name|int
+name|f
+init|=
+name|getFamilyLength
+argument_list|(
+name|o
+argument_list|)
+decl_stmt|;
 return|return
 name|compareColumns
 argument_list|(
@@ -2899,6 +2911,8 @@ name|o
 argument_list|,
 name|l
 argument_list|,
+name|f
+argument_list|,
 name|column
 argument_list|,
 literal|0
@@ -2906,6 +2920,8 @@ argument_list|,
 name|column
 operator|.
 name|length
+argument_list|,
+name|familylength
 argument_list|)
 operator|==
 literal|0
@@ -3018,7 +3034,7 @@ operator|==
 literal|0
 return|;
 block|}
-comment|/**    * @param left    * @param loffset    * @param llength    * @param right    * @param roffset    * @param rlength    * @return    */
+comment|/**    * @param left    * @param loffset    * @param llength    * @param lfamilylength Offset of family delimiter in left column.    * @param right    * @param roffset    * @param rlength    * @param rfamilylength Offset of family delimiter in right column.    * @return    */
 specifier|static
 name|int
 name|compareColumns
@@ -3037,6 +3053,10 @@ name|int
 name|llength
 parameter_list|,
 specifier|final
+name|int
+name|lfamilylength
+parameter_list|,
+specifier|final
 name|byte
 index|[]
 name|right
@@ -3048,9 +3068,16 @@ parameter_list|,
 specifier|final
 name|int
 name|rlength
+parameter_list|,
+specifier|final
+name|int
+name|rfamilylength
 parameter_list|)
 block|{
-return|return
+comment|// Compare family portion first.
+name|int
+name|diff
+init|=
 name|Bytes
 operator|.
 name|compareTo
@@ -3059,13 +3086,51 @@ name|left
 argument_list|,
 name|loffset
 argument_list|,
-name|llength
+name|lfamilylength
 argument_list|,
 name|right
 argument_list|,
 name|roffset
 argument_list|,
+name|rfamilylength
+argument_list|)
+decl_stmt|;
+if|if
+condition|(
+name|diff
+operator|!=
+literal|0
+condition|)
+block|{
+return|return
+name|diff
+return|;
+block|}
+comment|// Compare qualifier portion
+return|return
+name|Bytes
+operator|.
+name|compareTo
+argument_list|(
+name|left
+argument_list|,
+name|loffset
+operator|+
+name|lfamilylength
+argument_list|,
+name|llength
+operator|-
+name|lfamilylength
+argument_list|,
+name|right
+argument_list|,
+name|roffset
+operator|+
+name|rfamilylength
+argument_list|,
 name|rlength
+operator|-
+name|rfamilylength
 argument_list|)
 return|;
 block|}
@@ -4068,6 +4133,10 @@ parameter_list|,
 specifier|final
 name|int
 name|rlength
+parameter_list|,
+specifier|final
+name|int
+name|rfamilyoffset
 parameter_list|)
 block|{
 name|int
@@ -4103,11 +4172,20 @@ name|offset
 argument_list|,
 name|length
 argument_list|,
+name|left
+operator|.
+name|getFamilyLength
+argument_list|(
+name|offset
+argument_list|)
+argument_list|,
 name|right
 argument_list|,
 name|roffset
 argument_list|,
 name|rlength
+argument_list|,
+name|rfamilyoffset
 argument_list|)
 return|;
 block|}
@@ -4183,6 +4261,26 @@ argument_list|,
 name|rkeylength
 argument_list|)
 decl_stmt|;
+name|int
+name|lfamilylength
+init|=
+name|left
+operator|.
+name|getFamilyLength
+argument_list|(
+name|loffset
+argument_list|)
+decl_stmt|;
+name|int
+name|rfamilylength
+init|=
+name|right
+operator|.
+name|getFamilyLength
+argument_list|(
+name|roffset
+argument_list|)
+decl_stmt|;
 return|return
 name|getRawComparator
 argument_list|()
@@ -4198,6 +4296,8 @@ name|loffset
 argument_list|,
 name|llength
 argument_list|,
+name|lfamilylength
+argument_list|,
 name|right
 operator|.
 name|getBuffer
@@ -4206,6 +4306,8 @@ argument_list|,
 name|roffset
 argument_list|,
 name|rlength
+argument_list|,
+name|rfamilylength
 argument_list|)
 return|;
 block|}
@@ -5780,6 +5882,10 @@ parameter_list|,
 name|int
 name|llength
 parameter_list|,
+specifier|final
+name|int
+name|lfamilylength
+parameter_list|,
 name|byte
 index|[]
 name|right
@@ -5789,6 +5895,10 @@ name|roffset
 parameter_list|,
 name|int
 name|rlength
+parameter_list|,
+specifier|final
+name|int
+name|rfamilylength
 parameter_list|)
 block|{
 return|return
@@ -5802,11 +5912,15 @@ name|loffset
 argument_list|,
 name|llength
 argument_list|,
+name|lfamilylength
+argument_list|,
 name|right
 argument_list|,
 name|roffset
 argument_list|,
 name|rlength
+argument_list|,
+name|rfamilylength
 argument_list|)
 return|;
 block|}
