@@ -444,6 +444,12 @@ name|byte
 index|[]
 name|col
 decl_stmt|;
+specifier|private
+name|int
+name|familylength
+init|=
+literal|0
+decl_stmt|;
 name|ColumnMatcher
 parameter_list|(
 specifier|final
@@ -655,6 +661,17 @@ name|columnWithoutDelimiter
 expr_stmt|;
 name|this
 operator|.
+name|familylength
+operator|=
+name|parse
+index|[
+literal|0
+index|]
+operator|.
+name|length
+expr_stmt|;
+name|this
+operator|.
 name|wildCardmatch
 operator|=
 literal|false
@@ -720,6 +737,10 @@ argument_list|(
 name|this
 operator|.
 name|col
+argument_list|,
+name|this
+operator|.
+name|familylength
 argument_list|)
 return|;
 block|}
