@@ -1081,6 +1081,13 @@ operator|.
 name|COL_REGIONINFO
 operator|.
 name|length
+argument_list|,
+name|HConstants
+operator|.
+name|COLUMN_FAMILY_STR
+operator|.
+name|length
+argument_list|()
 argument_list|)
 operator|==
 literal|0
