@@ -170,6 +170,130 @@ argument_list|)
 decl_stmt|;
 specifier|public
 name|void
+name|testColumnCompare
+parameter_list|()
+throws|throws
+name|Exception
+block|{
+specifier|final
+name|byte
+index|[]
+name|a
+init|=
+name|Bytes
+operator|.
+name|toBytes
+argument_list|(
+literal|"aaa"
+argument_list|)
+decl_stmt|;
+name|byte
+index|[]
+name|column1
+init|=
+name|Bytes
+operator|.
+name|toBytes
+argument_list|(
+literal|"abc:def"
+argument_list|)
+decl_stmt|;
+name|byte
+index|[]
+name|column2
+init|=
+name|Bytes
+operator|.
+name|toBytes
+argument_list|(
+literal|"abcd:ef"
+argument_list|)
+decl_stmt|;
+name|KeyValue
+name|aaa
+init|=
+operator|new
+name|KeyValue
+argument_list|(
+name|a
+argument_list|,
+name|column1
+argument_list|,
+name|a
+argument_list|)
+decl_stmt|;
+name|assertFalse
+argument_list|(
+name|KeyValue
+operator|.
+name|COMPARATOR
+operator|.
+name|compareColumns
+argument_list|(
+name|aaa
+argument_list|,
+name|column2
+argument_list|,
+literal|0
+argument_list|,
+name|column2
+operator|.
+name|length
+argument_list|,
+literal|4
+argument_list|)
+operator|==
+literal|0
+argument_list|)
+expr_stmt|;
+name|column1
+operator|=
+name|Bytes
+operator|.
+name|toBytes
+argument_list|(
+literal|"abcd:"
+argument_list|)
+expr_stmt|;
+name|aaa
+operator|=
+operator|new
+name|KeyValue
+argument_list|(
+name|a
+argument_list|,
+name|column1
+argument_list|,
+name|a
+argument_list|)
+expr_stmt|;
+name|assertFalse
+argument_list|(
+name|KeyValue
+operator|.
+name|COMPARATOR
+operator|.
+name|compareColumns
+argument_list|(
+name|aaa
+argument_list|,
+name|column1
+argument_list|,
+literal|0
+argument_list|,
+name|column1
+operator|.
+name|length
+argument_list|,
+literal|4
+argument_list|)
+operator|==
+literal|0
+argument_list|)
+expr_stmt|;
+block|}
+specifier|public
+name|void
 name|testBasics
 parameter_list|()
 throws|throws
