@@ -110,6 +110,7 @@ Release 0.20.0 - Unreleased
    HBASE-1264  Wrong return values of comparators for ColumnValueFilter
                (Thomas Schneider via Andrew Purtell)
    HBASE-1374  NPE out of ZooKeeperWrapper.loadZooKeeperConfig
+   HBASE-1336  Splitting up the compare of family+column into 2 different compare 
 
   IMPROVEMENTS
    HBASE-1089  Add count of regions on filesystem to master UI; add percentage
